@@ -5,12 +5,13 @@
 Planet Defenders is a 2D arcade-styled defense game. The player must defend their home planet from incoming projectiles.  
 
 ###### How to Run
-1. Download planetDefender.GUI.jar and planetDefender.TEXT.jar from the releases tab under "Demo 2" (or click links to download)<br/> <https://github.com/30092171/pdef/releases/download/0.2/planetDefenders.GUI.jar><br/>
-<https://github.com/30092171/pdef/releases/download/0.2/planetDefenders.TEXT.jar><br/>
+
+1. Download planetDefender.GUI.jar and planetDefender.TEXT.jar from the releases tab under "Demo 3" (or click links to download)<br/> <https://github.com/30092171/pdef/releases/download/0.3/planetDefendersGUI.jar><br/>
+<https://github.com/30092171/pdef/releases/download/0.3/planetDefendersTEXT.jar><br/>
 2. Place .jar files in desired directory
 3. Double-click planetDefenders.GUI.jar to open the GUI version.
-4. Otherwise, open command line
-5. java -jar \<path\>\planetDefenders.TEXT.jar
+4. Otherwise for the text-based version, open command line
+5. java -jar \<path\>\planetDefendersTEXT.jar
 6. Enjoy!
 
 ###### Game Instructions (Text-Based)
@@ -25,16 +26,14 @@ Planet Defenders is a 2D arcade-styled defense game. The player must defend thei
 3. Point and click on desired position to block projectiles from hitting the planet
 
 ###### How to Compile Separately
-1. Install OpenJDK 13 (<https://adoptopenjdk.net/>)
-2. Install a suitable JavaFX SDK (<https://gluonhq.com/products/javafx/>)
-3. Download source code (<https://github.com/30092171/pdef/releases/download/0.2/planetDefenders_SourceCode.zip>)
 
-Steps to Compile Java Files<br/>
-\<set PATH_TO_FX="path\to\javafx-sdk-14\lib"\> <br/>
-\<javac --module-path %PATH_TO_FX% --add-modules javafx.controls *.java\> <br/>
-\<javac --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml *.java\> <br/>
+1. Install Java JDK 8 (<https://www.oracle.com/java/technologies/javase-jdk8-downloads.html>)
+2. Download Planet Defenders source code (<https://github.com/30092171/pdef/releases/download/0.3/planetDefenders_SourceCode.zip>)
 
-4. Move to pdef directory and compile the following files using the steps above:
+3. Set your JAVA_HOME and PATH (<https://javatutorial.net/set-java-home-windows-10>)
+
+4. Move to src directory and compile all the pdef files (<javac pdef/*.java>): <br/>
+
 ProjectileTemp.java<br/>
 Collidable.java<br/>
 Main.java<br/>
@@ -46,17 +45,17 @@ RotatingProjectile.java<br/>
 SpawnHandler.java<br/>
 SpeedUpProjectile.java<br/>
 
-5. Move a copy of the compiled pdef folder into the fxapplication folder.
+5. Move to src directory and compile all the fxapplication files (<javac fxapplication/*.java>):
 
-6. Move to fxapplication directory and compile the following files using the steps above:
 Barrier.java<br/>
 Controller.java<br/>
 Game.java<br/>
 GUI.java<br/>
 
-7. Run the following files by moving to one directory outside of where the files are located and type in the following:
-Text-Based --> \<java --module-path %PATH_TO_FX% --add-modules javafx.controls pdef.Main \> <br/>
-GUI-Based --> \<java --module-path %PATH_TO_FX% --add-modules javafx.controls fxapplication.Game \> <br/>
+6. Run the following files by moving tosrc directory and type in the following:<br/>
+Text-Based --> \<java pdef.Main \> <br/>
+GUI-Based --> \<java fxapplication.Game \> <br/>
+
 
 ###### JUnit Testing
 Currently our JUnit test for the Projectile class only works within Eclipse. After installing Eclipse, follow these steps to run the JUnit test.
